# hoptimizer

./: .gitignore  README.md
.github/workflows/: build-macos.yaml  build-wasm.yaml  deploy-wasm.yaml
Hoptiwasm/: AvbSwitchView.qml  CMakeLists.txt  ConnectionLine.qml  ConnectionMechanism.qml  EndstationView.qml  Main.qml  backend.cpp  backend.h  endstationviewcontroller.cpp  endstationviewcontroller.h  images.qrc  main.cpp  viewcontroller.cpp  viewcontroller.h
